--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                     <a href="#">Home</a>
                     <a href="Rafting-Website">Rafting Website.</a>
                     <a href="https://www.byui.edu">BYUI Site </a>
+                    <a href="./wwr/site-plan-rafting.html">Site Plan</a>
                 </nav>
             </header>
             <main>
