--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Hayli Sanders WDD 130</title>
         <meta name="description" content="Hayli Sanders rafting water nature adventure">
         <meta name="author" content="Hayli Sanders">
-        <link rel="stylesheet" href="./styles/style.css">
+        <link rel="stylesheet" href="styles/style.css">
      </head>
         <body>
             <header>
