--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -6,7 +6,7 @@
     <title>Rafting Site Plan ⎮ Hayli Sanders</title>
     <meta name="description" content="white water rafting,nature,families,church groups,style guide">
     <meta name="author" content="Hayli Sanders">
-    <link rel="stylesheet" href="./styles/site-plan-rafting.css">
+    <link rel="stylesheet" href="styles/site-plan-rafting.css">
 </head>
 <body>
     <header>
