--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -17,12 +17,18 @@
         <h2>overview</h2>
 
         <h3>Purpose</h3>
-        <p>The purpose of our company is to provide fun, safe, and educational white water rafting trips
-            to families, church, groups, and recreational white water rafting groups. We pride ourselves in our amazing staff.
-            We strive to nurture and grow feelings of love and respect for the water in both youth and adults.</p>
+        <p>The purpose of our company is to provide fun, safe, and educational white 
+            water rafting trips.
+            to families, church, groups, and recreational white water rafting groups. 
+            We pride ourselves in our amazing staff.
+            We strive to nurture and grow feelings of love and respect for the water in 
+            both youth and adults. In order to market the strong values of our company 
+            we have decided to create this website. The website will draw attention to 
+            our company. Ultimately, we hope to see increased revenue and happy 
+            customers.</p>
 
         <h3>audience</h3>
-        <p>Our target demographic is </p>
+        <p>Our target demographic is fa </p>
 
         <h2>Branding</h2>
 
