--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -28,29 +28,35 @@
             customers.</p>
 
         <h3>audience</h3>
-        <p>Our target demographic is fa </p>
+        <p>Our target demographic is families with children as well as, church groups 
+        and, school groups. These demographics have a primary concern for safety. We 
+        assure our customers that our staff are experienced and competent white water 
+        rafting tour guides. This helps to ease the minds of many anxious parents and 
+        teachers accompanying the children who want to know that their children will be 
+        safe. Our website will be accessible via mobile phone, desktop and, laptop.</p>
 
         <h2>Branding</h2>
 
         <h3>Website Logo</h3>
-        <img src="images/logo.png" alt="Rafting Site Logo">
+        <img src="images/logo.jpeg" alt="Rafting Site Logo">
 
         <h2>Style guide</h2>
 
         <h3>color palette</h3>
-        <p>yyihj</p>
-        <a href="https://coolors.co/ffffff-201e50-fca65f-0096e0"            target="_blank">https://coolors.co/ffffff-201e50-fca65f-0096e0</a>
+        <p>Our business chose to use a variety of colors in our website to best 
+        represent our brand.<a href="https://coolors.co/ffffff-201e50-fca65f-0096e0" target="_blank">https://coolors.co/ffffff-201e50-fca65f-0096e0</a></p>
         <h3>Typography</h3>
-        <h4>Headings Example font</h4>
+        <h4>Headings Example Font</h4>
         <h4>Normal text/paragraph font</h4>
-        <p>fill this out</p>
+        <p></p>
         <h4> colored call out example font</h4>
-        <p>fill this out</p>
+        <p></p>
         <h3>Navigation</h3>
         <nav>
             <a href="#">Home</a>
-            <a href="#">Page 2</a>
-            <a href="#">Contact us</a>
+            <a href="#">About Us</a>
+            <a href="#">Trips</a>
+            <a href="#">Contact Us</a>
         </nav>
 
         <h2>Wireframes</h2>
