--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -65,7 +65,7 @@
         <h3>Page 2 wireframe</h3>
     </main>
     <footer>
-        <p>©2023 🟩 Rafting Site Document 🌸 Hayli Sanders 🌸 WDD 130</p>
+        <p>©2023 🟧 Rafting Site Document 🌸 Hayli Sanders 🌸 WDD 130</p>
     </footer>  
 </body>
 </html>
