--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -45,8 +45,8 @@
         represent our brand.<a href="https://coolors.co/ffffff-201e50-fca65f-0096e0" target="_blank">https://coolors.co/ffffff-201e50-fca65f-0096e0</a></p>
         <h3>Typography</h3>
         <h4>Headings Example Font</h4>
-        <h4>Normal text/paragraph font</h4>
-        <p></p>
+        <h4>Normal Text/Paragraph font</h4>
+        <p>Normal Text/Paragraph font example</p>
         <h4> colored call out example font</h4>
         <p></p>
         <h3>Navigation</h3>
