--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -14,7 +14,7 @@
         <div>Hayli Sanders</div>
     </header>
     <main>
-        <h2>overview</h2>
+        <h2>Overview</h2>
 
         <h3>Purpose</h3>
         <p>The purpose of our company is to provide fun, safe, and educational white 
@@ -25,12 +25,12 @@
             our company. Ultimately, we hope to see increased revenue and happy 
             customers.</p>
 
-        <h3>audience</h3>
-        <p>Our target demographic is families with children as well as, church groups 
-        and, school groups. These demographics have a primary concern for safety. We 
+        <h3>Audience</h3>
+        <p>Our target demographic is families with children as well as church groups 
+        and school groups. These demographics have a primary concern for safety. We 
         assure our customers that our staff are experienced and competent white water 
         rafting tour guides. This helps to ease the minds of many anxious parents and 
-        teachers accompanying the children who want to know that their children will be 
+        teachers accompanying the children who need to know that their children will be 
         safe. Our website will be accessible via mobile phone, desktop and, laptop.</p>
 
         <h2>Branding</h2>
@@ -38,16 +38,16 @@
         <h3>Website Logo</h3>
         <img src="images/logo.jpeg" alt="Rafting Site Logo">
 
-        <h2>Style guide</h2>
+        <h2>Style Guide</h2>
 
-        <h3>color palette</h3>
+        <h3>Color Palette</h3>
         <p>Our business chose to use a variety of colors in our website to best 
         represent our brand.<a href="https://coolors.co/ffffff-201e50-fca65f-0096e0" target="_blank">https://coolors.co/ffffff-201e50-fca65f-0096e0</a></p>
         <h3>Typography</h3>
         <h4>Headings Example Font</h4>
         <h4>Normal Text/Paragraph font</h4>
         <p>Normal Text/Paragraph font example</p>
-        <h4> colored call out example font</h4>
+        <h4> Colored Call Out Example Font</h4>
         <p></p>
         <h3>Navigation</h3>
         <nav>
@@ -60,7 +60,7 @@
         <h2>Wireframes</h2>
         <h3>Home Page Wireframe</h3>
         <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="Required Home Page Wireframe Design">
-        <h3>Page 2 wireframe</h3>
+        <h3>Page 2 Wireframe</h3>
     </main>
     <footer>
         <p>©2023 🟧 Rafting Site Document 🌸 Hayli Sanders 🌸 WDD 130</p>
