--- a/index.html
+++ b/index.html
@@ -12,17 +12,24 @@
             <header>
                 <nav>
                     <a href="#">Home</a>
-                    <a href="Rafting-Website">Rafting Website.</a>
+                    <a href="Rafting-Website">Rafting Website </a>
                     <a href="https://www.byui.edu">BYUI Site </a>
                     <a href="./wwr/site-plan-rafting.html">Site Plan</a>
+                    <a href="https://linkedin.com">Linkedin</a>
+                    <a href="https://facebook.com">Facebook</a>
                 </nav>
             </header>
             <main>
                 <h1>Hayli Sanders | WDD 130</h1>
                 <img src="images/profile.jpg" alt="Hello my name is Hayli" width="200">
                 <p>Hello! My name is Hayli Sanders and I am from Spokane Washington. I love the summer months around Spokane because of all the nature activities there are near the city. There are 76 lakes in the Spokane area! I currently live in Rexburg Idaho while I attend college at Brigham Young University - Idaho. I also have a huge passion for learning languages. I have learned intermediate amounts of both Spanish and Russian. This love of language is what initially inspired me to learn how to code. Just as I believe in the value of spoken-language communication, I also value the free flow of information and communication that the internet provides us. I am so excited to share my continued improvement as my programming skills progress in the future!</p>
+                <ul class="box">
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/laie-hawaii-temple?lang=eng" target="_blank">Laie Hawaii Temple</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng" target="_blank">Salt Lake City Utah Temple </a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/mesa-arizona-temple?lang=eng" target="_blank">Mesa Arizona Temple</a></li>
+                </ul>
             </main>
-            <aside>
+            <aside class="box">
                 <h2>Washington</h2>
                 <img src="images/washington.jpg" alt="Washington Landscape">
                 <p> Washington state is located in the Pacific Northwest region of the United States of America. It is bordered by Canada to the north, the Pacific Ocean to the west,  oregon to the south, and Idaho to the east. The most populated city is Seattle while, Olympia is the capital. Washington is known globally as a major technology and business hub. The state has birthed many major companies such as Microsoft, Amazon, T-mobile, and many more. Washington is also known as the "Evergreen State" due to it's abundance of Evergreen trees and vast mountain ranges.</p>
@@ -31,4 +38,5 @@
                 <p>©2023 🌸Hayli Sanders🌸 Rexburg,Idaho</p>
             </footer>
         </body>
+        <!--Last Modified 4/30/2023 -->
     </html>
