--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,6 +6,7 @@
     <title>About Us ⎮ Hayli Sanders</title>
     <meta name="description" content="white water rafting,nature,families,church groups,style guide">
     <meta name="author" content="Hayli Sanders">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
