--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,7 +24,7 @@
         <img src="images/hero.jpg" alt="Hero">
         <h1>Water Wonderland</h1>
         <article>
-            <img src="images/happycustomer.jpg">
+            <img src="images/happyarticle.png">
             <p>The purpose of our company is to provide fun, safe, and educational white 
                 water rafting trips. We pride ourselves in our amazing staff.
                 We strive to nurture and grow feelings of love and respect for the water in 
@@ -50,13 +50,13 @@
         <p>©2023 🌊Water Wonderland🌊 🌸 Hayli Sanders 🌸</p>
         <nav class="Social Media Links">
             <a href="https://facebook.com">
-            <img src="images/facebook.jpg" alt="Facebook Icon">
+            <img src="images/facebook.png" alt="Facebook Icon">
         </a>
         <a href="https://twitter.com">
-            <img src="images/twitter.jpg" alt="Twitter Icon">
+            <img src="images/twitter.png" alt="Twitter Icon">
         </a>
         <a href="https://instagram.com">
-            <img src="images/instagram.jpg" alt="Instagram Icon">
+            <img src="images/instagram.png" alt="Instagram Icon">
         </a>
         </nav>  
     </footer>
