--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us ⎮ Hayli Sanders</title>
     <meta name="description" content="white water rafting,nature,families,church groups,style guide">
-    <meta name="author" content="Hayli Sanders">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
-        <div>Hayli Sanders</div>
         <img src="images/logo.jpeg" alt="Rafting Site Logo">
         <nav>
             <a href="index.html">Index</a>
@@ -20,8 +18,7 @@
         </nav>
     </header>
     <main>
-        <div class="hero"></div>
-        <img src="images/hero.jpg" alt="Hero">
+        <div class="hero"><img src="images/hero.jpg"alt="hero image"></h1>
         <h1>Water Wonderland</h1>
         <article>
             <img src="images/happyarticle.png">
