--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -41,6 +41,14 @@
         <h2>Style Guide</h2>
 
         <h3>Color Palette</h3>
+        
+        <h3> primary-color: #201e50;</h3>
+        <h3>secondary-color: #FFFFFF;</h3>
+        <h3>accent1-color: #fca65f;</h3>
+        <h3>accent2-color: #0096E0;</h3>
+
+            
+
         <p>Our business chose to use a variety of colors in our website to best 
         represent our brand.<a href="https://coolors.co/ffffff-201e50-fca65f-0096e0" target="_blank">https://coolors.co/ffffff-201e50-fca65f-0096e0</a></p>
         <h3>Typography</h3>
