--- a/wwr/about.html
+++ b/wwr/about.html
@@ -18,8 +18,9 @@
         </nav>
     </header>
     <main>
-        <div class="hero"><img src="images/hero.jpg"alt="hero image"></h1>
+        <div class="header"><img src="images/hero.jpg"alt="hero image">
         <h1>Water Wonderland</h1>
+        </div>
         <article>
             <img src="images/happyarticle.png">
             <p>The purpose of our company is to provide fun, safe, and educational white 
@@ -32,7 +33,7 @@
         </article>
         <section>
             <h2>History</h2>
-            <p>History of company....</p>
+            <p>Water Wonderland has been in operation since 1995. Originally, it started with as a volunteer operation.</p>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
