--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
-        <meta charset="utf-8">
-        <meta name = "viewport" content="width=device-width,initial-scale=1.0">
+<head>
+        <meta charset="UTF-8">
+        <meta name ="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hayli Sanders WDD 130</title>
         <meta name="description" content="Hayli Sanders rafting water nature adventure">
         <meta name="author" content="Hayli Sanders">
-        <link rel="stylesheet" href="styles/style.css">
-     </head>
+        <link rel="stylesheet" href="styles/styles.css">
+</head>
         <body>
             <header>
                 <nav>
@@ -30,7 +30,7 @@
                 </ul>
             </main>
             <aside class="box">
-                <h3>Washington</h3>
+                <h2>Washington</h2>
                 <img src="images/washington.jpg" alt="Washington Landscape">
                 <p> Washington state is located in the Pacific Northwest region of the United States of America. It is bordered by Canada to the north, the Pacific Ocean to the west,  oregon to the south, and Idaho to the east. The most populated city is Seattle while, Olympia is the capital. Washington is known globally as a major technology and business hub. The state has birthed many major companies such as Microsoft, Amazon, T-mobile, and many more. Washington is also known as the "Evergreen State" due to it's abundance of Evergreen trees and vast mountain ranges.</p>
             </aside>
