--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Hayli Sanders WDD 130</title>
         <meta name="description" content="Hayli Sanders rafting water nature adventure">
         <meta name="author" content="Hayli Sanders">
