--- a/wwr/about.html
+++ b/wwr/about.html
@@ -18,9 +18,9 @@
         </nav>
     </header>
     <main>
-        <div class="header"><img src="images/hero.jpg"alt="hero image">
+        <div class= "hero" >
+            <img src="images/hero.jpg"alt="hero image">
         <h1>Water Wonderland</h1>
-        </div>
         <article>
             <img src="images/happyarticle.png">
             <p>The purpose of our company is to provide fun, safe, and educational white 
@@ -43,10 +43,11 @@
             <img src="images/adventure4.jpg" alt="adventure4">
             <img src="images/adventure5.jpg" alt="adventure5">
         </section>
+        </div>
     </main>
     <footer>
         <p>©2023 🌊Water Wonderland🌊 🌸 Hayli Sanders 🌸</p>
-        <nav class="Social Media Links">
+        <nav class="Sociallinks">
             <a href="https://facebook.com">
             <img src="images/facebook.png" alt="Facebook Icon">
         </a>
