--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us ⎮ Hayli Sanders</title>
     <meta name="description" content="white water rafting,nature,families,church groups,style guide">
+    <meta name="author" content="Hayli Sanders">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
