--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,7 +34,7 @@
         </article>
         <section>
             <h2>History</h2>
-            <p>Water Wonderland has been in operation since 1995. Originally, it started with as a volunteer operation.</p>
+            <p>Water Wonderland has been in operation since 1995. Originally, it started as a volunteer operation. Today we are happy to have grown our company to over 300 full time employees with a strong passion for what they do</p>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
