--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <header>
                 <nav>
                     <a href="#">Home</a>
-                    <a href="./wwr/about.html">Rafting Website </a>
+                    <a href="./wwr/abouthtml">Rafting Website </a>
                     <a href="https://www.byui.edu">BYUI Site </a>
                     <a href="./wwr/site-plan-rafting.html">Site Plan</a>
                     <a href="https://linkedin.com">Linkedin</a>
