--- a/wwr/about.html
+++ b/wwr/about.html
@@ -20,10 +20,10 @@
     </header>
     <main>
         <div class= "hero" >
-            <img src="images/hero.jpg"alt="hero image">
+            <img src="images/hero.jpg" alt="hero image">
         <h1>Water Wonderland</h1>
         <article>
-            <img src="images/happyarticle.png">
+            <img src="images/happyarticle.png" alt="Happy customer">
             <p>The purpose of our company is to provide fun, safe, and educational white 
                 water rafting trips. We pride ourselves in our amazing staff.
                 We strive to nurture and grow feelings of love and respect for the water in 
