--- a/wwr/about.html
+++ b/wwr/about.html
@@ -48,7 +48,8 @@
     </main>
     <footer>
         <p>©2023 🌊Water Wonderland🌊 🌸 Hayli Sanders 🌸</p>
-        <nav class="Sociallinks">
+        <!-- <nav class="Sociallinks"> -->
+            
             <a href="https://facebook.com">
             <img src="images/facebook.png" alt="Facebook Icon">
         </a>
@@ -58,7 +59,8 @@
         <a href="https://instagram.com">
             <img src="images/instagram.png" alt="Instagram Icon">
         </a>
-        </nav>  
+    
+        <!-- </nav>   -->
     </footer>
 </body>
 </html>
