--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <a href="https://facebook.com">Facebook</a>
                 </nav>
             </header>
+            <div class="grid">
             <main>
                 <h1>Hayli Sanders | WDD 130</h1>
                 <img src="images/profile.jpg" alt="Hello my name is Hayli" width="200">
@@ -34,6 +35,7 @@
                 <img src="images/washington.jpg" alt="Washington Landscape">
                 <p> Washington state is located in the Pacific Northwest region of the United States of America. It is bordered by Canada to the north, the Pacific Ocean to the west,  oregon to the south, and Idaho to the east. The most populated city is Seattle while, Olympia is the capital. Washington is known globally as a major technology and business hub. The state has birthed many major companies such as Microsoft, Amazon, T-mobile, and many more. Washington is also known as the "Evergreen State" due to it's abundance of Evergreen trees and vast mountain ranges.</p>
             </aside>
+            </div>
             <footer>
                 <p>©2023 🌸Hayli Sanders🌸 Rexburg,Idaho</p>
             </footer>
