--- a/wwr/about.html
+++ b/wwr/about.html
@@ -38,11 +38,26 @@
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
+        <figure>
             <img src="images/adventure1.jpg" alt="adventure1">
+            <figcaption>Kids on a raft</figcaption>
+        </figure>
+        <figure>
             <img src="images/adventure2.jpg" alt="adventure2">
+            <figcaption>Aerial view of water</figcaption>
+        </figure>
+        <figure>
             <img src="images/adventure3.jpg" alt="adventure3">
+            <figcaption>Kids and adults on a yellow raft</figcaption>
+        </figure>
+        <figure>
             <img src="images/adventure4.jpg" alt="adventure4">
+            <figcaption>Two yellow rafts</figcaption>
+        </figure>
+        <figure>
             <img src="images/adventure5.jpg" alt="adventure5">
+            <figcaption>Boat With Four Helmets</figcaption>
+        </figure>
         </section>
         </div>
     </main>
