--- a/wwr/quiz.html
+++ b/wwr/quiz.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solar System Quiz</title>
+    <title> HTML and CSS Quiz</title>
+    <link rel="stylesheet" href="styles/quiz.css">
 </head>
 <body>
   <h1>Basic HTML and CSS Quiz</h1>
@@ -37,12 +38,12 @@
 
     <h2>4. </h2>
     <p>
-      <label for="q4">Please enter a hexadecimal value that would produce a color </label>
+      <label for="q4">How many characters are in a hexadecimal value in CSS?</label>
       <br>
       <input type="text" name="q4" id="q4">
     </p>
-    <button type="button" onclick="checkAnswers()">Submit</button>
+</br>
+    <button type="button" onclick="checkAnswers()">Submit Quiz</button>
   </form>
   </body>
 </html>
-
