--- a/wwr/quiz.html
+++ b/wwr/quiz.html
@@ -43,7 +43,7 @@
       <input type="text" name="q4" id="q4">
     </p>
 </br>
-    <button type="button" onclick="checkAnswers()">Submit Quiz</button>
+<button type="button" onclick="submit">Submit</button>
   </form>
   </body>
 </html>
