--- a/quiz.html
+++ b/quiz.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> HTML and CSS Quiz</title>
     <link rel="stylesheet" href="styles/quiz.css">
+    <meta name="description" content="Quiz for CSS and HTML">
+    <meta name="author" content="Hayli Sanders">
 </head>
 <body>
   <h1>Basic HTML and CSS Quiz</h1>
