--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> HTML and CSS Quiz</title>
     <link rel="stylesheet" href="styles/quiz.css">
-    <meta name="description" content="Quiz for CSS and HTML">
+    <meta name="description" content="Quiz, CSS, HTML">
     <meta name="author" content="Hayli Sanders">
   </head>
 <body>
