--- a/quiz.html
+++ b/quiz.html
@@ -42,7 +42,7 @@
     <p>
       <label for="q4">How many characters are in a hexadecimal value in CSS?</label>
       <br>
-      <input type="text" name="q4" id="q4">
+      <input type="number" name="q4" id="q4">
     </p>
 <button type="button" onclick="submit">Submit</button>
   </form>
