--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
             <header>
                 <nav>
                     <a href="#">Home</a>
-                    <a href="./wwr/about.html">Rafting Website </a>
-                    <a href="https://www.byui.edu">BYUI Site </a>
+                    <a href="./wwr/about.html">Rafting Website</a>
+                    <a href="https://www.byui.edu">BYUI Site</a>
                     <a href="./wwr/site-plan-rafting.html">Site Plan</a>
                     <a href="https://linkedin.com">Linkedin</a>
                     <a href="https://facebook.com">Facebook</a>
+                    <a href="./quiz.html">Quiz</a>
                 </nav>
             </header>
             <div class="grid">
