--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us ⎮ Hayli Sanders</title>
-    <meta name="description" content="white water rafting,nature,families,church groups,style guide">
+    <title>Contact Us ⎮ Hayli Sanders</title>
+    <meta name="description" content="white water rafting contact, email, phone number, contact us">
     <meta name="author" content="Hayli Sanders">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
@@ -19,26 +19,41 @@
         </nav>
     </header>
     <main>
-        <div class= "hero" >
-            <img src="images/hero.jpg" alt="hero image">
-        <h1>Water Wonderland</h1>
+        <h1>Phone Number and Email!</h1>
         <article>
-            <img src="images/happyarticle.png" alt="Happy customer">
-            <p>The purpose of our company is to provide fun, safe, and educational white 
-                water rafting trips. We pride ourselves in our amazing staff.
-                We strive to nurture and grow feelings of love and respect for the water in 
-                both youth and adults. In order to market the strong values of our company 
-                we have decided to create this website. The website will draw attention to 
-                our company. Ultimately, we hope to see increased revenue and happy 
-                customers.</p>
+            <p>Feel free to call or text us Monday-Friday during business hours at 509-599-3995. Or, email us any time at waterwonderland@gmail.com </p>
         </article>
-    </div>
         <section>
-            <h2>History</h2>
-            <p>Water Wonderland has been in operation since 1995. Originally, it started as a volunteer operation. Today we are happy to have grown our company to over 300 full time employees with a strong passion for what they do. </p>
+            <h2>Address and Map!</h2>
+            <p> Our Address is 424 N Upriver Dr, Logan Utah, 88764 </p>
         </section>
         <section>
-            <h2>Adventure Awaits You!</h2>
+            <h3>Help us get to know you!</h3>
+            <form action="submit.php" method="post">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label>Purpose of message: </label>
+                <input type="radio" id="general" name="purpose" value="General Inquiry" required>
+                <label for="general">General Inquiry</label>
+                <input type="radio" id="reservation" name="purpose" value="Reservation Question">
+                <label for="reservation">Reservation Question</label>
+                <input type="radio" id="suggestion" name="purpose" value="Website Suggestion">
+                <label for="suggestion">Website Suggestion</label>
+
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="4" cols="30" required></textarea>
+
+                <input type="checkbox" id="newsletter" name="newsletter">
+                <label for="newsletter">Please subscribe me to the monthly newsletter</label>
+
+                <input type="submit" value="submit">
+
+            </form>
+
         <figure>
             <img src="images/adventure1.jpg" alt="adventure1">
             <figcaption>Kids on a raft</figcaption>
@@ -60,11 +75,11 @@
             <figcaption>Boat With Four Helmets</figcaption>
         </figure>
         </section>
-        
+        </div>
     </main>
     <footer>
         <p>©2023 🌊Water Wonderland🌊 🌸 Hayli Sanders 🌸</p>
-        <!-- <nav class="Sociallinks"> -->
+/calendar        <!-- <nav class="Sociallinks"> -->
             
             <a href="https://facebook.com">
             <img src="images/facebook.png" alt="Facebook Icon">
