--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -25,7 +25,10 @@
         </article>
         <section>
             <h2>Address and Map!</h2>
-            <p> Our Address is 424 N Upriver Dr, Logan Utah, 88764 </p>
+            <p> Our Address is N Kaibab Trail, Grand Canyon Village, AZ 86023 </p>
+            <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15657.36284367844!2d-112.10075375470146!3d36.09798014008109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1685558862201!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </section>
         <section>
             <h3>Help us get to know you!</h3>
@@ -55,31 +58,23 @@
             </form>
 
         <figure>
-            <img src="images/adventure1.jpg" alt="adventure1">
-            <figcaption>Kids on a raft</figcaption>
+            <img src="images/ceo.png" alt="Chief Executive Officer">
+            <figcaption>Sarah Hill is the founder and Chief Executive Officer of the company. She decided to open for business fifteen years ago after graduating from Grand Canyon University with a Masters in Outdoor Recreation. </figcaption>
         </figure>
         <figure>
-            <img src="images/adventure2.jpg" alt="adventure2">
-            <figcaption>Aerial view of water</figcaption>
+            <img src="images/lead_marketing.png" alt="lead marketing coordinator">
+            <figcaption>Taylor Miller (right). Taylor has played a vital role over the last ten years. She has helped to grow our company into the popular rafting destination company that it is today.</figcaption>
         </figure>
         <figure>
-            <img src="images/adventure3.jpg" alt="adventure3">
-            <figcaption>Kids and adults on a yellow raft</figcaption>
-        </figure>
-        <figure>
-            <img src="images/adventure4.jpg" alt="adventure4">
-            <figcaption>Two yellow rafts</figcaption>
-        </figure>
-        <figure>
-            <img src="images/adventure5.jpg" alt="adventure5">
-            <figcaption>Boat With Four Helmets</figcaption>
+            <img src="images/rafting_coordinator.png" alt="lead rafting coordinator">
+            <figcaption>Alexander Carter has been an avid outdoor enthusiast his whole life. Alexander joined the team seven years ago after winning a National White Water Rafting competition. He brings a vast deal of knowledge and experience to the team.  </figcaption>
         </figure>
         </section>
         </div>
     </main>
     <footer>
         <p>©2023 🌊Water Wonderland🌊 🌸 Hayli Sanders 🌸</p>
-/calendar        <!-- <nav class="Sociallinks"> -->
+        <!-- <nav class="Sociallinks"> -->
             
             <a href="https://facebook.com">
             <img src="images/facebook.png" alt="Facebook Icon">
