--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us ⎮ Hayli Sanders</title>
+    <title>Contact ⎮ Water Wonderland</title>
     <meta name="description" content="white water rafting contact, email, phone number, contact us">
     <meta name="author" content="Hayli Sanders">
     <link rel="stylesheet" href="styles/rafting.css">
@@ -31,6 +31,7 @@
             </div>
         </section>
         <section>
+            <!--Make this horizantal-->
             <h3>Help us get to know you!</h3>
             <form action="submit.php" method="post">
                 <label for="name">Name:</label>
