--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -56,6 +56,7 @@
     <footer>
         <p>©2023 🌊Water Wonderland🌊 🌸 Hayli Sanders 🌸</p>
         <!-- <nav class="Sociallinks"> -->
+        <!--add trips wire frame -->
             
             <a href="https://facebook.com">
             <img src="images/facebook.png" alt="Facebook Icon">
