--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -21,6 +21,7 @@
     <main>
         <h1> Ready for an unforgettable experience?</h1>
         <article>
+            <img src ="images/home_hero.jpg" alt = "Home hero img">
             <p>We are excited to announce our three Special Trips along the Colorado river for the 2023 summer season!</p>
             <form>
                 <input type="button" onclick="window.location.href='https://www.w3docs.com';" value="w3docs" />
@@ -45,12 +46,12 @@
             </div>
         </section>
         <section>
-            <aside class="box"></aside>
+            <div class="camp">
             <h2>Level 3 Rafting Camp</h2>
             <img src="images/raft_camp.png" alt="teenager rafting camp">
             <p>We are excited to announce our 2 week long Rafting camp for teenagers. No experience required! We will begin our trip on level one waters teaching teenagers the importance of water and rafting safety. we will work our way down the river to Level 2 and Level 3 waters where the kids will have the chance to naturally build their rafting skills and confidence. We will camp along the river bank at night. The teenagers will be accompanied by 6 Well trained rafting instructors. </p>
             <button>Book Now</button>
-        </aside>
+            </div>
         </section>
     </main>
     <footer>
