--- a/wwr/index.html
+++ b/wwr/index.html
@@ -36,8 +36,11 @@
     
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required>
+                    <input type="checkbox" id="newsletter" name="newsletter">
+                <label for="newsletter">Please subscribe me to the monthly newsletter</label>
+                <input type="submit" value="submit">
+
             </form>
-            <!--add newsletter check box-->
         </section>
         <section>
             <h2>Impact</h2>
