--- a/wwr/camp.html
+++ b/wwr/camp.html
@@ -20,8 +20,8 @@
             <figcaption>Rafting photo from the July 2022 season. </figcaption>
         </figure>
         <figure>
-            <img src="images/lead_marketing.png" alt="kids day camp 2">
-            <figcaption>Camping set up from years past.</figcaption>
+            <img src="images/camping.jpg" alt="kids day camp 2">
+            <figcaption>View from tent from 2018 trip.</figcaption>
         </figure>
         <figure>
             <img src="images/rafting_coordinator.png" alt="kids day camp 3">
