--- a/wwr/index.html
+++ b/wwr/index.html
@@ -19,12 +19,13 @@
         </nav>
     </header>
     <main>
-        <div class= "hero" >
-            <img src="images/home_hero.jpg" alt="home image">
+        <div class= "home_hero" >
+        <img src="images/home_hero.jpg" alt="home image">
         <h1>Water Wonderland - Nurturing Your Child's Love For Nature </h1>
         <article>
             <img src="images/happyarticle.png" alt="Happy customer">
             <p> Water Wonderland is an incredible opportunity to give your child a one of a kind experience! We offer trips for families, children, and teenagers around the colorado river (check it out here). We take safety very seriously. All rafting instructors are experts in their fields with annual CPR and Life guard training. </p>
+        </div>
             <!--link trips page-->
         </article>
     </div>
