--- a/wwr/family.html
+++ b/wwr/family.html
@@ -24,7 +24,7 @@
             <figcaption>Rafting is fun for parents too!</figcaption>
         </figure>
         <figure>
-            <img src="images/family_trip.png" alt="kids day camp 3">
+            <img src="images/beautiful_river.png" alt="kids day camp 3">
             <figcaption>We are so lucky to look at this amazing landscape every day!</figcaption>
         </figure>
     </main>
