--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -52,7 +52,7 @@
                 <input type="checkbox" id="newsletter" name="newsletter">
                 <label for="newsletter">Please subscribe me to the monthly newsletter</label>
 
-                <input type="submit" value="submit">
+                <input type="submit" value="submit here">
 
             </form>
 
